--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "firebase": "^12.4.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
@@ -26,6 +27,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
