--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "firebase": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
