--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "firebase": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
     "motion": "^12.23.24",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sass": "^1.93.2"
   },
   "devDependencies": {
